--- a/app/src/main/res/layout/activity_rssfeed.xml
+++ b/app/src/main/res/layout/activity_rssfeed.xml
@@ -6,18 +6,17 @@
 
     <fragment
         android:id="@+id/listFragment"
+        class="info.ybalrid.rssbateau.MyListFragment"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="match_parent"
-        class="info.ybalrid.rssbateau.MyListFragment" ></fragment>
+        android:layout_weight="1"></fragment>
 
     <fragment
         android:id="@+id/detailFragment"
+        class="info.ybalrid.rssbateau.DetailFragment"
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="match_parent"
-        class="info.ybalrid.rssbateau.DetailFragment" >
-        <!-- Preview: layout=@layout/details -->
+        android:layout_weight="2">
     </fragment>
 
 </LinearLayout>
